--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "gen-env": "gen-env-types .env -o src/env.d.ts -e .",
+    "build": "tsc",
     "watch": "tsc -w",
     "dev": "nodemon dist/index.js",
     "dev2": "nodemon --exec ts-node src/index.ts",
@@ -23,6 +25,7 @@
     "@types/nodemailer": "^6.4.0",
     "@types/redis": "^2.8.28",
     "@types/uuid": "^8.3.0",
+    "gen-env-types": "^1.0.5",
     "nodemon": "^2.0.7",
     "ts-node": "^9.1.1",
     "typescript": "^4.1.3"
@@ -33,6 +36,8 @@
     "class-validator": "^0.13.0",
     "connect-redis": "^5.0.0",
     "cors": "^2.8.5",
+    "dataloader": "^2.0.0",
+    "dotenv-safe": "^8.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "graphql": "^15.4.0",
